--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
                             <img src="leetcode_icon.jpeg" alt="LeetCode Profile">
                         </a>
                     </div><br>
-                    <button onclick="window.location.href='Manisha_Asini_resume.pdf'" class="resume-button">Get My Resume</button><br>
+                    <button onclick="window.location.href='Asini_Manisha.pdf'" class="resume-button">Get My Resume</button><br>
                 </div>
                 <div class="about-me-photo">
                     <img src="m2.jpg" alt="Your Photo">
